--- a/.woodpecker/.deploy.yaml
+++ b/.woodpecker/.deploy.yaml
@@ -1,9 +1,14 @@
 pipeline:
+  build:
+    image: node
+    environment:
+      - NODE_ENV=production
+    commands:
+      - npm install
+      - npm build
   deploy:
   commands:
   - ls
 
-depends_on:
-  - build
 # when:
 #   tag: v*
