--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -4,7 +4,7 @@ pipeline:
     environment:
       - NODE_ENV=production
     commands:
-      - npm install
+      - npm ci
       - npm run build
 
 branches:
