--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -5,7 +5,8 @@ pipeline:
       - NODE_ENV=production
     commands:
       - ls
-      - npm ci
+      - npm install
+      - ls
       - npm run build
 
 branches:
