--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -1,6 +1,6 @@
 pipeline:
   build:
-    image: node:18-alpine
+    image: node:lts-hydrogen
     environment:
       - NODE_ENV=production
     commands:
